[package]
name = "iganalyzer-rust"
version = "0.1.0"
authors = ["Richard Huang <pandaplusplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bolt-client = "0.7.0"
bolt-proto = "0.8.0"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_warn"] }
futures = "0.3"
futures-util = "0.3.1"
futures-channel = "0.3"
protobuf = { version = "2.16.0" }
flatbuffers = { version = "0.6.1" }
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"

