[package]
name = "task"
version = "0.1.0"
authors = ["Richard Huang <pandaplusplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
bytes = "0.5.4"
tokio = { version = "0.2.21", features = ["full"] }
url = "2.1.1"
bb8-redis = "0.5.0"
log = "0.4.11"
chrono = "0.4.15"
rand = "0.7.3"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.3.1", features = ["codec"] }
env_logger = "0.7.1"
async-trait = "0.1.41"
